hphp/hack/test/typecheck/func_ptr_in_constants/disallowed/allowed_func_ptr_builtins.php.exp
File "allowed_func_ptr_builtins.php", line 11, characters 14-22:
Invalid expression in constant initializer (Parsing[1002])
File "allowed_func_ptr_builtins.php", line 12, characters 15-43:
Invalid expression in constant initializer (Parsing[1002])
File "allowed_func_ptr_builtins.php", line 18, characters 14-22:
Invalid expression in constant initializer (Parsing[1002])
File "allowed_func_ptr_builtins.php", line 19, characters 15-43:
Invalid expression in constant initializer (Parsing[1002])
